--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,5 +2,19 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="display-4 text-success">It works!</h1>
-{% endblock %}
+<div class="container">
+    <div class="p-3 p-md-4 mb-3 rounded card">
+       
+            <img src=".../media/card.jpg" class="card-img" alt="card-image">
+            <div class="card-img-overlay">
+                <h5 class="card-title">Custom Candles</h5>
+                <p class="card-text">Relax and enjoy your favourite scents with custom candles delivered straight to
+                    your door.
+                </p>
+                <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+            </div>
+    
+    </div>
+</div>
+
+    {% endblock %}
