--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+    {% load static %}
     {% block meta %}
     <!-- Required meta tags -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -21,7 +21,7 @@
         integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/70abe2c3f7.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     <title>Custom Candles</title>
@@ -29,7 +29,7 @@
 
 <body>
     <header class="container-fluid fixed-top">
-        <nav class="navbar navbar-expand-lg bg-light brown-text">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a href="" class="navbar-brand"> <img src="../media/logo.png" class="rounded-circle align-self-center p-1" alt="logo"
                         height=100 width=100></a>
@@ -49,7 +49,6 @@
                             <a class="nav-link" href="#">Pricing</a>
                         </li>
                     </ul>
-
                     <ul class="nav justify-content-end">
                         {% if request.user.is_authenticated %}
                         <li class="nav-item mx-2">
