--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,19 +2,44 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    <div class="p-3 p-md-4 mb-3 rounded card">
-       
-            <img src=".../media/card.jpg" class="card-img" alt="card-image">
-            <div class="card-img-overlay">
-                <h5 class="card-title">Custom Candles</h5>
-                <p class="card-text">Relax and enjoy your favourite scents with custom candles delivered straight to
-                    your door.
-                </p>
-                <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
-            </div>
-    
+
+<div class="container jumbotron">
+    <div class="p-3 p-md-4 mb-3 rounded card hero-image">
+        <h1 class="display-4 text-light"><strong>Custom Candles</strong></h1>
+        <p class="lead text-light">Relax and enjoy your favourite scents with custom candles delivered straight to your
+            door.</p>
+        <div class="d-flex justify-content-left">
+            <a class="btn btn-light btn-lg btn-block joinusbtn" href="" role="button">Shop Now</a>
+        </div>
     </div>
 </div>
+
+
+
+<div class="card-group">
+  <div class="card">
+    <img src="../media/icandle-50.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Bespoke</h5>
+      <p class="card-text">You choose the candle that you want.</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="../media/sustainability-50.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Sustainable</h5>
+      <p class="card-text">All our candles are made from sustainable ingredients and all our packaging is recyclable.</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="../media/" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">No Harsh Chemicals</h5>
+      <p class="card-text">We hand make all our candles with all natural ingredients and no toxic chemicals.</p>
+    </div>
+  </div>
+</div>
+
+
 
     {% endblock %}
