--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,7 @@
 nav {
     color:#642714 !important;
     background-color: #ddcdc0 !important;
+    min-height: 100px;
 }
 
 body {
@@ -14,6 +15,31 @@ body {
     color:#642714 !important;
 }
 
+
+
+.hero-image {
+    background-image: url('/media/jumbotron-image.jpg'); 
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    height: 400px;
+    
+}
+
+.hero-image p {
+    color: #642714 !important;
+}
+
+.hero-image h1 {
+    color: #642714  !important;
+}
+
+
+.jumbotron {
+    margin-bottom: 0rem;    
+    padding-top: 150px;
+
+}
 
 
 /* -------------------------------- Media Queries */
