--- a/templates/base.html
+++ b/templates/base.html
@@ -28,79 +28,88 @@
 </head>
 
 <body>
-    <header class="container-fluid fixed-top">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a href="" class="navbar-brand"> <img src="../media/logo.png" class="rounded-circle align-self-center p-1" alt="logo"
-                        height=100 width=100></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item mx-2">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item mx-2">
-                            <a class="nav-link" href="#">Products</a>
-                        </li>
-                        <li class="nav-item mx-2">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                    </ul>
-                    <ul class="nav justify-content-end">
-                        {% if request.user.is_authenticated %}
-                        <li class="nav-item mx-2">
-                            <a class="nav-link" href="#">My Account</a>
-                        </li>
-                        <li class="nav-item mx-2">
-                            <a class="nav-link" href="#">Logout</a>
-                        </li>
-                        {% else %}
-                        <li class="nav-item mx-2">
-                            <a class="nav-link" aria-current="page" href="#">
-                                <div class="text-center">
-                                    <div><i class="fas fa-sign-in-alt fa-lg"></i></div>
-                                    <p class="my-0">
-                                        Login
-                                    </p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="nav-item mx-2">
-                            <a class="nav-link" href="#">
-                                <div class="text-center">
-                                    <div><i class="fas fa-user-plus fa-lg"></i></div>
-                                    <p class="my-0">
-                                        Register
-                                    </p>
-                                </div>
-                            </a>
-                        </li>
-                        {% endif %}
-                        <li class="nav-item mx-2">
-                            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                                href="">
-                                <div class="text-center">
-                                    <div><i class="fas fa-shopping-basket fa-lg"></i></div>
-                                    <p class="my-0">
-                                        {% if grand_total %}
-                                        ${{ grand_total|floatformat:2 }}
-                                        {% else %}
-                                        $0.00
-                                        {% endif %}
-                                    </p>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg fixed-top" style="height: 100px;">
+            <div class="container-fluid fixed-top">
+                <div class="row justify-content-between">
+                    <div class="col">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item mx-2">
+                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                </li>
+                                <li class="nav-item mx-2">
+                                    <a class="nav-link" href="#">Products</a>
+                                </li>
+                                <li class="nav-item mx-2">
+                                    <a class="nav-link" href="#">Pricing</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <a href="" class="navbar-brand"> <img src="../media/logo1.png"
+                                class="rounded-circle align-self-center p-1" alt="logo" height=70 width=70></a>
+                    </div>
+                    <div class="col">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            {% if request.user.is_authenticated %}
+                            <li class="nav-item mx-2">
+                                <a class="nav-link" href="#">My Account</a>
+                            </li>
+                            <li class="nav-item mx-2">
+                                <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+                            </li>
+                            {% else %}
+                            <li class="nav-item mx-2">
+                                <a class="nav-link" aria-current="page" href="{% url 'account_login' %}">
+                                    <div class="text-center">
+                                        <div><i class="fas fa-sign-in-alt fa-lg"></i></div>
+                                        <p class="my-0">
+                                            Login
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="nav-item mx-2">
+                                <a class="nav-link" href="{% url 'account_signup' %}">
+                                    <div class="text-center">
+                                        <div><i class="fas fa-user-plus fa-lg"></i></div>
+                                        <p class="my-0">
+                                            Register
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                            {% endif %}
+                            <li class="nav-item mx-2">
+                                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                                    href="">
+                                    <div class="text-center">
+                                        <div><i class="fas fa-shopping-basket fa-lg"></i></div>
+                                        <p class="my-0">
+                                            {% if grand_total %}
+                                            ${{ grand_total|floatformat:2 }}
+                                            {% else %}
+                                            $0.00
+                                            {% endif %}
+                                        </p>
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-
         </nav>
-
     </header>
+
+
 
     {% if messages %}
     <div class="message-container"></div>
