update footer and homepage

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,31 +15,96 @@
 </div>
 
 
-
-<div class="card-group">
-  <div class="card">
-    <img src="../media/icandle-50.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Bespoke</h5>
-      <p class="card-text">You choose the candle that you want.</p>
+<!-- Marketing section-->
+<section>
+    <div class="banner container">
+        <h2 class="text-center text-uppercase">Why Choose Us</h2>
     </div>
-  </div>
-  <div class="card">
-    <img src="../media/sustainability-50.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Sustainable</h5>
-      <p class="card-text">All our candles are made from sustainable ingredients and all our packaging is recyclable.</p>
+    <div class="row">
+        <div class="col-lg-4">
+            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+                role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title>Placeholder</title>
+                <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777"
+                    dy=".3em">140x140</text>
+            </svg>
+
+            <h2>Bespoke</h2>
+            <p>You choose the candle that you want.</p>
+        </div>
+        <div class="col-lg-4">
+            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+                role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title>Placeholder</title>
+                <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777"
+                    dy=".3em">140x140</text>
+            </svg>
+
+            <h2>Sustainable</h2>
+            <p>All our candles are made from sustainable ingredients and all our packaging is recyclable.</p>
+        </div>
+        <div class="col-lg-4">
+            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+                role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title>Placeholder</title>
+                <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777"
+                    dy=".3em">140x140</text>
+            </svg>
+
+            <h2>No Harsh Chemicals</h2>
+            <p>We hand make all our candles with all natural ingredients and no toxic chemicals.</p>
+        </div>
     </div>
-  </div>
-  <div class="card">
-    <img src="../media/" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">No Harsh Chemicals</h5>
-      <p class="card-text">We hand make all our candles with all natural ingredients and no toxic chemicals.</p>
+</section>
+<!-- Testimonials-->
+<section class="testimonials m-2 my-5">
+    <div class="banner container">
+        <h2 class="text-center text-uppercase">Testimonials</h2>
     </div>
-  </div>
-</div>
+    <div class="quotes container-fluid">
+        <div class="row">
+            <div class="col-sm">
+                <div class="media bg-light align-self-center m-1">
+                    <div class="media-body align-self-center m-2">
+                        <blockquote class="blockquote m-2 p-1">
+                            <p class="m-0">I love to build new scents with custom candles!</p>
+                            <p class="quote-name">Jenny Benny - <cite title="quotefrom">Monkstown</cite></p>
+                        </blockquote>
+                    </div>
+                    <img src="../media/testimonials/jennybenny.jpg" class="rounded-circle align-self-center p-1"
+                        alt="jennyreview" height=100 width=100>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="media bg-light align-self-center m-1">
+                    <div class="media-body align-self-center m-2 p-1">
+                        <blockquote class="blockquote m-2">
+                            <p class="m-0">I love the quality of a handmade product</p>
+                            <p class="quote-name">Tommy Tucker - <cite title="quotefrom">Blackrock</cite></p>
+                        </blockquote>
+                    </div>
+                    <img src="../media/testimonials/tommytucker.jpg" class="rounded-circle align-self-center p-1"
+                        alt="tommyreview" height=100 width=100>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="media bg-light align-self-center m-1">
+                    <div class="media-body align-self-center m-2 p-1">
+                        <blockquote class="blockquote m-2">
+                            <p class="m-0">My Friday nights are even more relaxing with Custom Candles.</p>
+                            <p class="quote-name">Harri Hippo - <cite title="quotefrom">Ranelagh</cite></p>
+                        </blockquote>
+                    </div>
+                    <img src="../media/testimonials/harrihippo.jpg" class="rounded-circle align-self-center p-1"
+                        alt="Harireview" height=100 width=100>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
-    {% endblock %}
+
+
+{% endblock %}
