--- a/templates/base.html
+++ b/templates/base.html
@@ -29,81 +29,79 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top" style="height: 100px;">
-            <div class="container-fluid fixed-top">
-                <div class="row justify-content-between">
-                    <div class="col">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                            aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNav">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <li class="nav-item mx-2">
-                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                                </li>
-                                <li class="nav-item mx-2">
-                                    <a class="nav-link" href="#">Products</a>
-                                </li>
-                                <li class="nav-item mx-2">
-                                    <a class="nav-link" href="#">Pricing</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <a href="" class="navbar-brand"> <img src="../media/logo1.png"
-                                class="rounded-circle align-self-center p-1" alt="logo" height=70 width=70></a>
-                    </div>
-                    <div class="col">
+
+        <nav class=" navbar navbar-expand-lg fixed-top" style="height: 100px;">
+            <div class="container-fluid">
+                <div class="col-1">
+                    <a href="" class="navbar-brand"> <img src="../media/logo1.png"
+                            class="rounded-circle align-self-center p-1" alt="logo" height=100 width=100></a>
+                </div>
+                <div class="col-9 pt-1">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            {% if request.user.is_authenticated %}
                             <li class="nav-item mx-2">
-                                <a class="nav-link" href="#">My Account</a>
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-                            </li>
-                            {% else %}
-                            <li class="nav-item mx-2">
-                                <a class="nav-link" aria-current="page" href="{% url 'account_login' %}">
-                                    <div class="text-center">
-                                        <div><i class="fas fa-sign-in-alt fa-lg"></i></div>
-                                        <p class="my-0">
-                                            Login
-                                        </p>
-                                    </div>
-                                </a>
+                                <a class="nav-link" href="#">Products</a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link" href="{% url 'account_signup' %}">
-                                    <div class="text-center">
-                                        <div><i class="fas fa-user-plus fa-lg"></i></div>
-                                        <p class="my-0">
-                                            Register
-                                        </p>
-                                    </div>
-                                </a>
-                            </li>
-                            {% endif %}
-                            <li class="nav-item mx-2">
-                                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                                    href="">
-                                    <div class="text-center">
-                                        <div><i class="fas fa-shopping-basket fa-lg"></i></div>
-                                        <p class="my-0">
-                                            {% if grand_total %}
-                                            ${{ grand_total|floatformat:2 }}
-                                            {% else %}
-                                            $0.00
-                                            {% endif %}
-                                        </p>
-                                    </div>
-                                </a>
+                                <a class="nav-link" href="#">Pricing</a>
                             </li>
                         </ul>
                     </div>
+                </div>
+                <div class="col-md-auto">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    {% if request.user.is_authenticated %}
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#">My Account</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" aria-current="page" href="{% url 'account_login' %}">
+                                <div class="text-center">
+                                    <div><i class="fas fa-sign-in-alt fa-lg"></i></div>
+                                    <p class="my-0">
+                                        Login
+                                    </p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="{% url 'account_signup' %}">
+                                <div class="text-center">
+                                    <div><i class="fas fa-user-plus fa-lg"></i></div>
+                                    <p class="my-0">
+                                        Register
+                                    </p>
+                                </div>
+                            </a>
+                        </li>
+                        {% endif %}
+                        <li class="nav-item mx-2">
+                            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                                href="">
+                                <div class="text-center">
+                                    <div><i class="fas fa-shopping-basket fa-lg"></i></div>
+                                    <p class="my-0">
+                                        {% if grand_total %}
+                                        ${{ grand_total|floatformat:2 }}
+                                        {% else %}
+                                        $0.00
+                                        {% endif %}
+                                    </p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -126,5 +124,34 @@
 
 
 </body>
+
+<footer class="footer-style">
+
+    <div class="container-sm">
+        <div class="row">
+            <div class="col-sm-4 contactinfo">
+                <p> <i class="fas fa-map-marker-alt"></i>Cape Clear, Cork </p>
+                <p> <i class="fas fa-envelope"></i> hello@custom_candles.ie </p>
+            </div>
+            <div class="col-sm-4 logo d-flex justify-content-center">
+                <img src="../media/logo1.png" class="rounded-circle align-self-center p-1 d-none d-sm-block" alt="logo"
+                    height=70 width=70>
+            </div>
+            <div class="col-sm-4 social-section">
+                <ul class="social-networks">
+                    <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+                    <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                    <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid copyright">
+        Copyright - This website is for educational purposes only
+    </div>
+
+</footer>
+
 
 </html>
