--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,8 +20,8 @@
     <div class="banner container">
         <h2 class="text-center text-uppercase">Why Choose Us</h2>
     </div>
-    <div class="row">
-        <div class="col-lg-4">
+    <div class="row justify-content-md-center home-section gx-5">
+        <div class="col-lg-4 text-center">
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
                 role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <title>Placeholder</title>
@@ -32,7 +32,7 @@
             <h2>Bespoke</h2>
             <p>You choose the candle that you want.</p>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 text-center">
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
                 role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <title>Placeholder</title>
@@ -43,7 +43,7 @@
             <h2>Sustainable</h2>
             <p>All our candles are made from sustainable ingredients and all our packaging is recyclable.</p>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 text-center">
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
                 role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <title>Placeholder</title>
@@ -57,50 +57,72 @@
     </div>
 </section>
 <!-- Testimonials-->
-<section class="testimonials m-2 my-5">
-    <div class="banner container">
+<section class="testimonials">
+    <div class="banner container justify-content-center">
         <h2 class="text-center text-uppercase">Testimonials</h2>
     </div>
     <div class="quotes container-fluid">
-        <div class="row">
+        <div class="row home-section gx-5">
             <div class="col-sm">
-                <div class="media bg-light align-self-center m-1">
-                    <div class="media-body align-self-center m-2">
-                        <blockquote class="blockquote m-2 p-1">
-                            <p class="m-0">I love to build new scents with custom candles!</p>
-                            <p class="quote-name">Jenny Benny - <cite title="quotefrom">Monkstown</cite></p>
-                        </blockquote>
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4 avatar">
+                            <img src="../media/testimonials/jennybenny.jpg" class="rounded-circle align-self-center p-1"
+                                alt="jennyreview" height=100 width=100>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <blockquote class="blockquote m-2 p-1">
+                                    <p class="m-0">I love to build new scents with custom candles!</p>
+                                    <p class="quote-name">Jenny - <cite title="quotefrom">Monkstown</cite></p>
+                                </blockquote>
+                            </div>
+                        </div>
                     </div>
-                    <img src="../media/testimonials/jennybenny.jpg" class="rounded-circle align-self-center p-1"
-                        alt="jennyreview" height=100 width=100>
+                </div>
+            </div>
+
+            <div class="col-sm">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4 avatar">
+                            <img src="../media/testimonials/tommytucker.jpg"
+                                class="rounded-circle align-self-center p-1" alt="jennyreview" height=100 width=100>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <blockquote class="blockquote m-2 p-1">
+                                    <p class="m-0">I love the quality of a handmade product</p>
+                                    <p class="quote-name">Tommy - <cite title="quotefrom">Blackrock</cite></p>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-sm">
-                <div class="media bg-light align-self-center m-1">
-                    <div class="media-body align-self-center m-2 p-1">
-                        <blockquote class="blockquote m-2">
-                            <p class="m-0">I love the quality of a handmade product</p>
-                            <p class="quote-name">Tommy Tucker - <cite title="quotefrom">Blackrock</cite></p>
-                        </blockquote>
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4 avatar">
+                            <img src="../media/testimonials/michelle.jpg" class="rounded-circle align-self-center p-1"
+                                alt="jennyreview" height=100 width=100>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <blockquote class="blockquote m-2 p-1">
+                                    <p class="m-0">I love to change the scent of my candle with the seasons.</p>
+                                    <p class="quote-name">Michelle - <cite title="quotefrom">Dun
+                                            Laoghaire</cite></p>
+                                </blockquote>
+                            </div>
+                        </div>
                     </div>
-                    <img src="../media/testimonials/tommytucker.jpg" class="rounded-circle align-self-center p-1"
-                        alt="tommyreview" height=100 width=100>
-                </div>
-            </div>
-            <div class="col-sm">
-                <div class="media bg-light align-self-center m-1">
-                    <div class="media-body align-self-center m-2 p-1">
-                        <blockquote class="blockquote m-2">
-                            <p class="m-0">My Friday nights are even more relaxing with Custom Candles.</p>
-                            <p class="quote-name">Harri Hippo - <cite title="quotefrom">Ranelagh</cite></p>
-                        </blockquote>
-                    </div>
-                    <img src="../media/testimonials/harrihippo.jpg" class="rounded-circle align-self-center p-1"
-                        alt="Harireview" height=100 width=100>
                 </div>
             </div>
         </div>
     </div>
+
+
 </section>
 
 
