create products app

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -68,7 +68,7 @@
                     <div class="row g-0">
                         <div class="col-md-4 avatar">
                             <img src="../media/testimonials/jennybenny.jpg" class="rounded-circle align-self-center p-1"
-                                alt="jennyreview" height=100 width=100>
+                                alt="jennyreview" height="100" width="100">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
@@ -87,7 +87,7 @@
                     <div class="row g-0">
                         <div class="col-md-4 avatar">
                             <img src="../media/testimonials/tommytucker.jpg"
-                                class="rounded-circle align-self-center p-1" alt="jennyreview" height=100 width=100>
+                                class="rounded-circle align-self-center p-1" alt="jennyreview" height="100" width="100">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
@@ -105,7 +105,7 @@
                     <div class="row g-0">
                         <div class="col-md-4 avatar">
                             <img src="../media/testimonials/michelle.jpg" class="rounded-circle align-self-center p-1"
-                                alt="jennyreview" height=100 width=100>
+                                alt="jennyreview" height="100" width="100">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
