--- a/product/templates/product/products.html
+++ b/product/templates/product/products.html
@@ -3,6 +3,14 @@
 
 {% block content %}
 
+
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+
+
 <div class="container jumbotron">
     <div class = "row">
         <div class="col">
