--- a/templates/base.html
+++ b/templates/base.html
@@ -29,35 +29,31 @@
 
 <body>
     <header>
-
-        <nav class=" navbar navbar-expand-lg fixed-top" style="height: 100px;">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <div class="container-fluid">
-                <div class="col-1">
-                    <a href="" class="navbar-brand"> <img src="../media/logo1.png"
-                            class="rounded-circle align-self-center p-1" alt="logo" height=100 width=100></a>
+                <a href="" class="navbar-brand"> <img src="../media/logo1.png"
+                        class="rounded-circle align-self-center p-1" alt="logo" height=100 width=100></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item mx-2">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="{% url 'shop' %}">Shop Product</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-9 pt-1">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item mx-2">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item mx-2">
-                                <a class="nav-link" href="#">Products</a>
-                            </li>
-                            <li class="nav-item mx-2">
-                                <a class="nav-link" href="#">Pricing</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-auto">
+                <div class="col d-none d-sm-block d-md-none d-lg-block">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    {% if request.user.is_authenticated %}
+                        {% if request.user.is_authenticated %}
                         <li class="nav-item mx-2">
                             <a class="nav-link" href="#">My Account</a>
                         </li>
