--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,8 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <div class="container-fluid">
-                <a href="" class="navbar-brand"> <img src="../media/logo1.png"
-                        class="rounded-circle align-self-center p-1" alt="logo" height=100 width=100></a>
+                <a href="{% url 'home' %}" class="navbar-brand"> <img src="../media/logo1.png"
+                        class="rounded-circle align-self-center p-1" alt="logo" height="100" width="100"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item mx-2">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item mx-2">
                             <a class="nav-link" href="{% url 'shop' %}">Shop Product</a>
@@ -55,10 +55,24 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         {% if request.user.is_authenticated %}
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="#">My Account</a>
+                            <a class="nav-link" href="#">
+                                     <div class="text-center">
+                                    <div><i class="fas fa-user-alt fa-lg"></i></div>
+                                    <p class="my-0">
+                                        My Account
+                                    </p>
+                                </div>
+                            </a>
                         </li>
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+                            <a class="nav-link" href="{% url 'account_logout' %}">
+                                <div class="text-center">
+                                    <div><i class="fas fa-sign-out-alt fa-lg"></i></div>
+                                    <p class="my-0">
+                                        Logout
+                                    </p>
+                                </div>
+                            </a>
                         </li>
                         {% else %}
                         <li class="nav-item mx-2">
@@ -84,7 +98,7 @@
                         {% endif %}
                         <li class="nav-item mx-2">
                             <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                                href="">
+                                href="{% url 'view_bag' %}">
                                 <div class="text-center">
                                     <div><i class="fas fa-shopping-basket fa-lg"></i></div>
                                     <p class="my-0">
@@ -121,7 +135,7 @@
 
 </body>
 
-<footer class="footer-style">
+<footer class="footer-style fixed-bottom">
 
     <div class="container-sm">
         <div class="row">
@@ -131,7 +145,7 @@
             </div>
             <div class="col-sm-4 logo d-flex justify-content-center">
                 <img src="../media/logo1.png" class="rounded-circle align-self-center p-1 d-none d-sm-block" alt="logo"
-                    height=70 width=70>
+                    height="70" width="70">
             </div>
             <div class="col-sm-4 social-section">
                 <ul class="social-networks">
