--- a/product/templates/product/products.html
+++ b/product/templates/product/products.html
@@ -19,7 +19,7 @@
 
         </div>
         <div class="col">
-             <form class="form" action="{% url 'add_to_bag' %}" method="POST">
+             <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                 {% csrf_token %}
 
                 <h2 class="text-center">Customise Your Candle</h2>
@@ -64,8 +64,7 @@
                                     </span>
                                 </button>
                             </div>
-                            <input class="form-control qty_input" type="number" name="quantity" value="1" min="1"
-                                max="99">
+                            <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ scents.name }}" id="id_qty_{{ scents.name }}">
                             <div class="input-group-append">
                                 <button class="increment-qty btn btn-black rounded-0" >
                                     <span class="icon">
@@ -89,4 +88,37 @@
 
 
 
+{% endblock %}
+
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+		$('.btt-link').click(function(e) {
+			window.scrollTo(0,0)
+		})
+	</script>
+    
+    <script type="text/javascript">
+        $('#sort-selector').change(function() {
+            var selector = $(this);
+            var currentUrl = new URL(window.location);
+
+            var selectedVal = selector.val();
+            if(selectedVal != "reset"){
+                var sort = selectedVal.split("_")[0];
+                var direction = selectedVal.split("_")[1];
+
+                currentUrl.searchParams.set("sort", sort);
+                currentUrl.searchParams.set("direction", direction);
+
+                window.location.replace(currentUrl);
+            } else {
+                currentUrl.searchParams.delete("sort");
+                currentUrl.searchParams.delete("direction");
+
+                window.location.replace(currentUrl);
+            }
+        })
+    </script>
 {% endblock %}
