update product detail

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,7 +9,7 @@
         <p class="lead text-light">Relax and enjoy your favourite scents with custom candles delivered straight to your
             door.</p>
         <div class="d-flex justify-content-left">
-            <a class="btn btn-light btn-lg btn-block joinusbtn" href="" role="button">Shop Now</a>
+            <a class="btn btn-light btn-lg btn-block joinusbtn" href="{% url 'shop' %}" role="button">Shop Now</a>
         </div>
     </div>
 </div>
