--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
                             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="{% url 'shop' %}">Shop Product</a>
+                            <a class="nav-link" href="{% url 'shop' %}">View Products</a>
                         </li>
                         <li class="nav-item mx-2">
                             <a class="nav-link" href="#">Pricing</a>
@@ -134,8 +134,8 @@
 
 
 </body>
+<footer class="footer mt-auto py-3">
 
-<footer class="footer-style fixed-bottom">
 
     <div class="container-sm">
         <div class="row">
