format product details page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -192,3 +192,12 @@ footer {
     color: #642714;
     text-align: center;
 }
+
+/*--------------------------------------------Product Detail Page*/
+
+.det_image {
+    padding-top: 20%;
+    padding-bottom: 20%;
+
+
+}
