--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -12,22 +12,22 @@
 
 
 <div class="container">
-    <div class="row">
-        <div class="col">
+    <div class="row mb-5">
+        <div class="col-sm">
 
-            <a href="{{ products.image.url }}" target="_blank">
-                <img class="card-img-top img-fluid" src="{{ products.image.url }}" alt="{{ products.name }}">
+            <a href="{{ product_det.image.url }}" target="_blank">
+                <img class="img-fluid det_image" src="{{ product_det.image.url }}" alt="{{ product_det.name }}">
             </a>
 
 
         </div>
-        <div class="col">
-            <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+        <div class="col-sm">
+            <form class="form" action="" method="POST">
                 {% csrf_token %}
 
-                <h2 class="text-center">Chose Scent</h2>
+                <h3 class="text-center">{{ product_det.name }}</h3>
 
-                <div class="my-5">
+                <div class="my-3">
                     <label for="disabledSelect" class="form-label"><strong> Choose Scent One</strong></label>
                     <select class="form-select" name="scent_one_select" aria-label="Default select example">
                         <option selected>Scent Options</option>
@@ -36,7 +36,7 @@
                         {% endfor %}
                     </select>
                 </div>
-                <div class="my-5">
+                <div class="my-3">
                     <label for="disabledSelect" class="form-label"><strong> Choose Scent Two</strong></label>
                     <select class="form-select" name="scent_two_select" aria-label="Default select example">
 
@@ -46,7 +46,7 @@
                         {% endfor %}
                     </select>
                 </div>
-                <div class="my-5">
+                <div class="my-3">
                     <p class="mt-3"><strong>Quantity:</strong></p>
                     <div class="form-group w-50">
                         <div class="input-group">
