--- a/product/templates/product/products.html
+++ b/product/templates/product/products.html
@@ -19,7 +19,7 @@
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="card h-100 border-0">
                         
-                        <a href="{{% url 'product_detail' product.id %}}">
+                        <a href="{% url 'product_detail' products.id %}">
                             <img class="card-img-top img-fluid" src="{{ products.image.url }}" alt="{{ products.name }}">
                         </a>
                      
