creating bag view

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="{% url 'shop' %}">View Products</a>
                         </li>
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link" href="#">Scents</a>
                         </li>
                     </ul>
                 </div>
