--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -26,7 +26,7 @@
                 <thead>
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">Jar Colour</th>
+                        <th scope="col">Item</th>
                         <th scope="col">Scent One</th>
                         <th scope="col">Scent Two</th>
                         <th scope="col">Quantity</th>
@@ -34,14 +34,16 @@
                     </tr>
                 </thead>
                 <tbody>
-                   
+                   {% for Cart in cart %}
                     <tr>
                         <th scope="row">1</th>
-                        <td>{{  }}</td>
+                        <td>{{ Cart.products.all }}</td>
                         <td></td>
                         <td></td>
+                        <td></td>
+                        <td>{{ price }}</td>
                     </tr>
-                   
+                  {% endfor %}
                 </tbody>
                 <tfoot>
                     <tr>
@@ -50,7 +52,7 @@
                         <td></td>
                         <td></td>
                         <td>Total:</td>
-                        <td>{{}}</td>
+                        <td></td>
                     </tr>
                 </tfoot>
 
@@ -61,9 +63,9 @@
                 <span class="icon">
                     <i class="fas fa-chevron-left"></i>
                 </span>
-                <span class="text-uppercase">Create A Custom Candle</span>
+                <span class="text-uppercase">Shop Products</span>
             </a>
-            {% endif %}
+        
         </div>
     </div>
 
