--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -58,6 +58,7 @@
                         <td></td>
                         <td><h5><strong>Total: ${{ total|floatformat:2 }}</strong></h5>
                         <h5>Delivery: ${{ delivery|floatformat:2 }}</h5>
+                        <h5>Discount: ${{ discount|floatformat:2 }}</h5>
                         <h4 class="mt-2"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
                         </td>
 
