--- a/static/css/base.css
+++ b/static/css/base.css
@@ -201,3 +201,11 @@ footer {
 
 
 }
+
+/*--------------------------------------------Bag Page*/
+
+.btt-link,
+.update-link,
+.remove-item {
+    cursor: pointer;
+}
