--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="row">
-        <div class="col">     
+        <div class="col">
             {% if bag_items %}
             <table class="table">
                 <thead>
@@ -35,7 +35,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                   {% for item in bag_items %}
+                    {% for item in bag_items %}
                     <tr>
                         <th scope="row"></th>
                         <td class="p-3 w-25">
@@ -43,8 +43,40 @@
                         </td>
                         <td>{{ item.product.name }}</td>
                         <td>{{ item.scent_one }}</td>
-                        <td></td>
-                        <td>{{ item.quantity }}</td>
+                        <td>
+
+                        </td>
+                        <td class="py-3 w-25">
+                            <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <button class="decrement-qty btn btn-sm btn-black rounded-0"
+                                                data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                                <span>
+                                                    <i class="fas fa-minus fa-sm"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <input class="form-control form-control-sm qty_input" type="number"
+                                            name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                                            data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
+                                        <div class="input-group-append">
+                                            <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                                data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                                <span>
+                                                    <i class="fas fa-plus fa-sm"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <input type="hidden" name="scent_one" value="{{ item.scent_one }}">
+                                    </div>
+                                </div>
+                            </form>
+                            <a class="update-link text-info"><small>Update</small></a>
+                            <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-scent_one="{{ item.scent_one }}"><small>Remove</small></a>
+                        </td>
                         <td>${{ item.product.price }}</td>
                     </tr>
                     {% endfor %}
@@ -56,18 +88,19 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td><h5><strong>Total: ${{ total|floatformat:2 }}</strong></h5>
-                        <h5>Delivery: ${{ delivery|floatformat:2 }}</h5>
-                        <h5>Discount: ${{ discount|floatformat:2 }}</h5>
-                        <h4 class="mt-2"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
+                        <td>
+                            <h5><strong>Total: ${{ total|floatformat:2 }}</strong></h5>
+                            <h5>Delivery: ${{ delivery|floatformat:2 }}</h5>
+                            <h5>Discount: ${{ discount|floatformat:2 }}</h5>
+                            <h4 class="mt-2"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
                         </td>
 
-                    
+
                     </tr>
                 </tfoot>
 
             </table>
-             {% else %}
+            {% else %}
             <p class="lead mb-5">Your bag is empty.</p>
             <a href="{% url 'shop' %}" class="btn btn-outline-black rounded-0 btn-lg">
                 <span class="icon">
@@ -78,6 +111,30 @@
             {% endif %}
         </div>
     </div>
+{% endblock %}
+{% block postloadjs %}
+{{ block.super }}
+{% include 'product/includes/quantity_input_script.html' %}
 
+    <script type="text/javascript">
+        // Update quantity on click
+        $('.update-link').click(function (e) {
+            var form = $(this).prev('.update-form');
+            form.submit();
+        })
 
-    {% endblock %}
+        // Remove item and reload on click
+        $('.remove-item').click(function (e) {
+            var csrfToken = "{{ csrf_token }}";
+            var itemId = $(this).attr('id').split('remove_')[1];
+            var scent_one = $(this).data('scent_one');
+            var url = `/bag/remove/${itemId}/`;
+            var data = { 'csrfmiddlewaretoken': csrfToken, 'scent_one': scent_one };
+
+            $.post(url, data)
+                .done(function () {
+                    location.reload();
+                });
+        })
+    </script>
+{% endblock %}
